# annapura-labs

./: .gitignore  Cargo.toml  README.md
benches/: matmul.rs
src/: accelerator.rs  attention.rs  compiler.rs  gguf.rs  lib.rs  matmul.rs  nn.rs  perf_model.rs  quant.rs  tokenizer.rs  transformer.rs
