[package]
name = "annapura"
version = "0.0.1"
edition = "2021"
publish = false
description = "From-scratch ML systems + accelerator co-design hack project"

[lib]
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "matmul"
harness = false

[profile.release]
debug = true
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
half = "2.7.1"
memmap2 = "0.9.10"
wide = "1.4.0"
